0.31 (in development):

0.30:
	* Bug with tweet time in timeline while the option is unchecked is fixed

0.29:
	* Bug with wrong tweets sorting after tweet posting fixed (#79)
	* Mailto links fixed
	* Bug with removing a user with tweets in other account's timeline

0.28:
	+ Showing instagr.am links as an icons
	* Big code refactoring
	* Nicks suggest small bugfix with wrong nick cut
	* Some style changes

0.27:
	* Small fix

0.26:
	* No suggest for email addresses
	+ t.co links expander
	+ Showing tumblr.com links as an icons
	* Bug with focused tweet editor after send is fixed (#74)
	* Bug with nicks in quotes is fixed (#73)

0.25:
	* Bug with suggest select with mouse is fixed

0.24:
	* Unhide the tweet client and time info after reply
	+ Email addresses are now links
	* Fixed email parsing as a screen_name
	* Now Twic is even faster than before
	* Reply to the retweet reverted to the original way
	+ Suggest for nick

0.23:
	* Fix for unread tweets count marker

0.22:
	* Friends storage rewritten
	* Resettings the last tweet id after account removement

0.21:
	* Fixed the hash replace for urls like test.dom/#hash
	* Pulsate the add account button when no account registered (waiting for CSSO to support webkit keyframes)
	* Reply to the retweet is the reply to retweeter

0.20:
	* Fixing a first extension initialization possible bug

0.19:
	* Goog object is not available in developer version of Google Chrome

0.18:
	* User nick is moved to the right top on the profile page
	* Bug with automatic Twic authorization on the pages for another applications is fixed
	* Small things in interface
	* Hope the bug with first authorization and OAuth timestamp is finally fixed

0.17:
	* New tweet editor is now smaller on blur
	* "Insert link" button is now disabled if we can't do it
	+ Displaying the tweet time (optional, disabled by default)
	+ Displaying the user Twitter client in tweet (optional, disabled by default)
	+ Settings button on the first page
	- Donate button