@@ -1,4 +1,5 @@
 0.31 (in development):
+	+ Links shortening for long tweets (#14)
 
 0.30:
 	* Bug with tweet time in timeline while the option is unchecked is fixed
